small change to popup.html

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 
-<button id="test">?</button>
+<p>Adverts found: <span id="adCount">None</span></p>
 
+<script src="popup.js"></script>
 </body>
 </html>
