first working version of stick or twist, single-player

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
+<style>
+    html {
+                width: 200px;
+                height: 100px;
+                
+            }
+</style>
 <html>
 <body>
-
+<h1 hidden id="result"></h1>
 <p>Adverts found: <span id="adCount">None</span></p>
+<p>Ad tracker goal: <span id="goal"></span></p>
+
+<button id="newGame">New game</button>
+<button hidden id="stick">Stick</button>
 
 <script src="popup.js"></script>
 </body>
