--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <style>
     html {
-                width: 200px;
-                height: 100px;
-                
-            }
+        width: 300px;
+        height: 100px;
+
+    }
 </style>
 <html>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+
 <body>
-<h1 hidden id="result"></h1>
-<p>Adverts found: <span id="adCount">None</span></p>
-<p>Ad tracker goal: <span id="goal"></span></p>
+    <h1 hidden id="result"></h1>
 
-<button id="newGame">New game</button>
-<button hidden id="stick">Stick</button>
+    <div hidden id="error" class="alert alert-danger" role="alert">
+        A website that was previously visited does not count towards your score! Try Again!
+    </div>
 
-<script src="popup.js"></script>
+
+    <p>Adverts found: <span id="adCount">None</span></p>
+    <p>Ad tracker goal: <span id="goal"></span></p>
+
+    <button id="newGame" class="alert alert-primary">New game</button>
+    <button hidden id="stick" class="btn btn-danger">Stick</button>
+    <button hidden id="twist" class="btn btn-success">Twist</button>
+
+    <script src="popup.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+
 </html>
