--- a/socket.io Tutorial/public/index.html
+++ b/socket.io Tutorial/public/index.html
@@ -20,23 +20,18 @@
 </head>
 <body>
 <section>
+    <button type="button" id="create">create
+
+    </button>
     <button type="button" id="crazyButton" class="btn-crazy btn btn-lg btn-danger">
     </button>
     <button type="button" id="startButton" class="btn-start btn btn-lg">Start
     </button>
-    <a href="#" class="nes-btn is-warning home-btn">Home</a>
 
-    <div class="starting-section">
-        <div class="text-left" style="border-bottom: 2px solid black; border-right: 2px solid black;">
-            <h3 class="game-title">The Internet Button</h3>
-            <p>beep...boop...beep...boop</p>
-            <p>...buup...brrm...boop</p>
-        </div>
-        <div class="text-right" style="border-bottom: 2px solid black; border-left: 2px solid black;">
-            <h3>What is this?</h3>
-            <p>Hey, this is a socket.io tutorial. Click with caution!</p>
-        </div>
-    </div>
+    <table id="activeGames">
+        <tr>
+          <th>Active Games</th>
+        </tr>
 </section>
     <!-- Socket.IO Javacript -->
     <script src="/socket.io/socket.io.js"></script>
