--- a/chrome-extension-v2/popup.html
+++ b/chrome-extension-v2/popup.html
@@ -25,8 +25,7 @@
 
     <div id="lobby">
         <h2 id="lobbyLabel"></h2>
-        <div id = "chat"></div>
-        <button id="messagebtn">Send Message!</button>
+        <button type="button" id="readyBtn" disabled="disabled">Ready Up</button>
     </div>
     <div id="game">
         <div id="error" class="alert alert-danger" role="alert">
@@ -36,7 +35,6 @@
         <div id="resultScreen">
             <h1 id="result"></h1>
             <h2>Final Score: <span class="badge bg-secondary" id="finalScore"></span></h2>
-            <button id="newGame" class="alert alert-primary">New game</button>
         </div>
 
         <div id="gameScreen">
@@ -56,8 +54,11 @@
 
 
         </div>
+
+        
         
     </div>
+    <div id="waitingForOpponent"><h1>Waiting for other player to make move...</h1></div>
     <div>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="scripts/jquery.js"></script>
