--- a/chrome-extension-v2/popup.html
+++ b/chrome-extension-v2/popup.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-<style>
-    html {
-        width: 300px;
-        height: 100px;
-    }
-</style>
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
-
+    <h3 id="gameSelectTitle">Active Games</h3>
     <div id="lobbySelect">
-        <button type="button" id="create">create</button>
-        <table id="activeGames">
-            <tr>
-                <th>Active Games</th>
-            </tr>
-        </table>
+        <div id="activeGames" class="list-group">
+        </div>
+        <div id="createbtnDiv">
+            <button type="button" id="createbtn" class="btn btn-success">CREATE</button>
+        </div>
     </div>
-
     <div id="lobby">
         <h2 id="lobbyLabel"></h2>
         <button type="button" id="readyBtn" disabled="disabled">Ready Up</button>
@@ -50,32 +42,27 @@
     </div>
     <div id="waitingForOpponent">
         <h2>Waiting for other player to make move...</h1>
-        <img src='imgs/Spinner-1s-200px.gif' />
+            <img src='imgs/Spinner-1s-200px.gif' />
     </div>
     <div id="resultScreen">
         <h2 id=result></h2>
         <p id="goal">Ad tracker goal: <span></span></p>
         <p id="adCount">You Found: <span>None</span></p>
-        <p id="opponnentScore">Your oponnent found: <span >None</span></p>
-        
-        
+        <p id="opponnentScore">Your oponnent found: <span>None</span></p>
+
+
 
     </div>
     <div>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="scripts/jquery.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="popup.js"></script>
 
 
     </div>
-    <div><button id="admin" style="align-items: bottom;">admin reset</button></div>
+    <div><button id="admin" style="positioning:absolute; bottom: 0px;">admin reset</button></div>
 </body>
 
 </html>
