--- a/chrome-extension-v2/popup.html
+++ b/chrome-extension-v2/popup.html
@@ -7,17 +7,26 @@
 </head>
 
 <body>
-    <h3 id="gameSelectTitle">Active Games</h3>
     <div id="lobbySelect">
-        <div id="activeGames" class="list-group">
+
+        <h3 id="gameSelectTitle">Active Games</h3>
+        <div id="activeGamesDiv">
+            <div id="activeGames" class="list-group">
+            </div>
         </div>
         <div id="createbtnDiv">
-            <button type="button" id="createbtn" class="btn btn-success">CREATE</button>
+            <button type="button" id="createbtn" class="btn btn-success">Create</button>
         </div>
     </div>
     <div id="lobby">
-        <h2 id="lobbyLabel"></h2>
-        <button type="button" id="readyBtn" disabled="disabled">Ready Up</button>
+        <h4 id="lobbyLabel"></h4>
+        <div id="readyBtnDiv">
+            <button type="button" class="btn btn-success btn-lg" id="readyBtn" disabled="disabled" >Ready Up</button>
+            <div id="ready-div">
+            <img id="ready-img"src='imgs/green-tick.png' />
+            <p id="ready-text">Waiting for other player to ready!</p>
+        </div>
+        </div>
     </div>
     <div id="game">
         <div id="error" class="alert alert-danger" role="alert">
@@ -45,6 +54,7 @@
             <img src='imgs/Spinner-1s-200px.gif' />
     </div>
     <div id="resultScreen">
+        <button id="home">home</button>
         <h2 id=result></h2>
         <p id="goal">Ad tracker goal: <span></span></p>
         <p id="adCount">You Found: <span>None</span></p>
@@ -54,15 +64,20 @@
 
     </div>
     <div>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="scripts/jquery.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
         <script src="popup.js"></script>
 
 
     </div>
-    <div><button id="admin" style="positioning:absolute; bottom: 0px;">admin reset</button></div>
+    <div><button id="admin">admin reset</button></div>
 </body>
 
 </html>
