more css and finished the first iteration of game

--- a/chrome-extension-v2/popup.html
+++ b/chrome-extension-v2/popup.html
@@ -21,11 +21,11 @@
     <div id="lobby">
         <h4 id="lobbyLabel"></h4>
         <div id="readyBtnDiv">
-            <button type="button" class="btn btn-success btn-lg" id="readyBtn" disabled="disabled" >Ready Up</button>
+            <button type="button" class="btn btn-success btn-lg" id="readyBtn" disabled="disabled">Ready Up</button>
             <div id="ready-div">
-            <img id="ready-img"src='imgs/green-tick.png' />
-            <p id="ready-text">Waiting for other player to ready!</p>
-        </div>
+                <img id="ready-img" src='imgs/green-tick.png' />
+                <p id="ready-text">Waiting for other player to ready!</p>
+            </div>
         </div>
     </div>
     <div id="game">
@@ -54,12 +54,13 @@
             <img src='imgs/Spinner-1s-200px.gif' />
     </div>
     <div id="resultScreen">
-        <button id="home">home</button>
-        <h2 id=result></h2>
-        <p id="goal">Ad tracker goal: <span></span></p>
-        <p id="adCount">You Found: <span>None</span></p>
-        <p id="opponnentScore">Your oponnent found: <span>None</span></p>
-
+        <button id="home"></button>
+        <div id="resultInfo">
+            <h2 id=result></h2>
+            <p id="goal">Ad tracker goal:<span></span></p>
+            <p id="adCount">You Found:<span>None</span></p>
+            <p id="opponnentScore">Your oponnent found:<span>None</span></p>
+        </div>
 
 
     </div>
