--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -85,7 +85,7 @@
             <h2 id=result></h2>
             <p id="goal">Ad tracker goal:<span></span></p>
             <p id="adCount">You Found:<span>None</span></p>
-            <p id="opponnentScore">Your oponnent found:<span>None</span></p>
+            <p id="opponentScore">Your opponent found:<span>None</span></p>
         </div>
     </div>
     <div>
